--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 <script type="text/javascript" src="https://dl.dropboxusercontent.com/s/gv9ol503vdrjcgf/search.js"></script>
 <ul>
 	<li><a class="navbarSel">Bukkit Plugins</a></li>
-	<li><a class="navbar" href="https://dl.dropboxusercontent.com/s/29myk7nevrg7s18/faq.html">FAQ</a></li>
-	<li><a class="navbar" href="https://dl.dropbox.com/s/z8njvvwcopzq5uj/donations.html">Donate</a></li>
+	<li><a class="navbar" href="http://mrcookieslime.github.io/FAQ">FAQ</a></li>
+	<li><a class="navbar" href="http://mrcookieslime.github.io/Donations">Donate</a></li>
 	<li class="search"><input size="30" type="text" id="search" class="search_box" onkeyup="search()" value=" Browse Projects" onfocus="if(this.value == ' Browse Projects'){this.value='';}" />    </li>
 </ul>
 
