Added Slimefun Wiki

--- a/index.html
+++ b/index.html
@@ -3,92 +3,12 @@
 <body bgcolor="#24345A">
 <title>mrCookieSlime's Projects</title>
 
-<style type="text/css">
-	div {
-		color: #D8D8D8;
-	}
-	ul {
-		list-style-type: none;
-		color: #D8D8D8;
-		float: top;
-		background-color: #292E37;
-		top: -15px;
-		position: relative;
-		width: auto;
-		height: 70px;
-	}
-	table {
-		width: 100%;
-		border-style: solid;
-		border-width: 4px;
-		border-color: #767A79;
-	}
-	li {
-		float: left;
-	}
-	li.search {
-		float: right;
-	}
-	a {
-		text-decoration: none;
-		font-weight: bold;
-		color: #DFDFDF;
-	}
-	a:hover {
-		color: #FDFDFD;
-	}
-	th {
-		color: #2C2C2C;
-		font-weight: bold;
-		overflow: hidden;
-		height: 30px;
-	}
-	td {
-		color: #DFDFDF;
-		height: 30px;
-	}
-	a.navbar {
-		background-color: #292E37;
-		color: #D8D8D8;
-		height: 35px;
-		display: block;
-		width: 115px;
-		padding: 5px;
-		margin-top: 25px;
-		text-align: center;
-	}
-	a.navbarSel {
-		display: block;
-		width: 115px;
-		padding: 5px;
-		text-align: center;
-		margin-top: 10px;
-		height: 50px;
-		background-color: #40485A;
-		color: #E8E8E8;
-	}
-	a.navbar:hover {
-		margin-top: 10px;
-		height: 50px;
-		background-color: #40485A;
-		color: #E8E8E8;
-	}
-	input.search_box {
-		background-color: #40485A;
-		border-width: 1px;
-		border-color:  #2E2E2E;
-		width: 200px;
-		height: 25px;
-		margin-top: 20px;
-		margin-right: 30px;
-		color: #CCCCCC;
-		font-weight: bold;
-	}
-</style>
+<link href="css/layout.css" rel="stylesheet">
 <script type="text/javascript" src="https://dl.dropboxusercontent.com/s/gv9ol503vdrjcgf/search.js"></script>
 <ul>
 	<li><a class="navbarSel">Bukkit Plugins</a></li>
 	<li><a class="navbar" href="http://mrcookieslime.github.io/FAQ">FAQ</a></li>
+	<li><a class="navbar" href="http://mrcookieslime.github.io/Slimefun">Slimefun Wiki</a></li>
 	<li class="search"><input size="30" type="text" id="search" class="search_box" onkeyup="search()" value=" Browse Projects" onfocus="if(this.value == ' Browse Projects'){this.value='';}" />    </li>
 </ul>
 
