--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>mrCookieSlime's Projects</title>
 
 <link href="css/layout.css" rel="stylesheet">
-<script type="text/javascript" src="https://dl.dropboxusercontent.com/s/gv9ol503vdrjcgf/search.js"></script>
+<script type="text/javascript" src="javascript/search.js"></script>
 <ul>
 	<li><a class="navbarSel">Bukkit Plugins</a></li>
 	<li><a class="navbar" href="http://mrcookieslime.github.io/FAQ">FAQ</a></li>
