Added Contact Page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<li><a class="navbarSel">Bukkit Plugins</a></li>
 	<li><a class="navbar" href="http://mrcookieslime.github.io/FAQ">FAQ</a></li>
 	<li><a class="navbar" href="http://mrcookieslime.github.io/Slimefun">Slimefun Wiki</a></li>
+	<li><a class="navbar" href="http://mrcookieslime.github.io/contact">Contact</a></li>
 	<li class="search"><input size="30" type="text" id="search" class="search_box" onkeyup="search()" value=" Browse Projects" onfocus="if(this.value == ' Browse Projects'){this.value='';}" />    </li>
 </ul>
 
