Added Overlay Links

--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
 	<li class="search"><input size="30" type="text" id="search" class="search_box" onkeyup="search()" value=" Browse Projects" onfocus="if(this.value == ' Browse Projects'){this.value='';}" />    </li>
 </ul>
 
+<a href="http://bukkit.org/members/mrcookieslime.90809177/">
+	<img class="bukkit" src="images/bukkit.png">
+	<span>mrCookieSlime on Bukkit</span>
+</a>
+<a href="https://github.com/mrCookieSlime">
+	<img class="github" src="images/github.png">
+	<span>mrCookieSlime on GitHub</span>
+</a>
+<a href="http://steamcommunity.com//id/moewe1">
+	<img class="steam" src="images/steam.png">
+	<span>mrCookieSlime on Steam</span>
+</a>
+
 
 <head #FFOOOO><div id="header" style="text-align:center; padding: 2px; margin:8px"><p style="font-family:cursive"><b><font size="6"> - Projects by mrCookieSlime - </font></b></p></div></head>
 <p style="font-family:cursive">
