Added Tooltip Border

--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@
 
 <a href="http://bukkit.org/members/mrcookieslime.90809177/">
 	<img class="bukkit" src="images/bukkit.png">
-	<span>mrCookieSlime on Bukkit</span>
+	<span> mrCookieSlime on Bukkit </span>
 </a>
 <a href="https://github.com/mrCookieSlime">
 	<img class="github" src="images/github.png">
-	<span>mrCookieSlime on GitHub</span>
+	<span> mrCookieSlime on GitHub </span>
 </a>
 <a href="http://steamcommunity.com//id/moewe1">
 	<img class="steam" src="images/steam.png">
-	<span>mrCookieSlime on Steam</span>
+	<span> mrCookieSlime on Steam </span>
 </a>
 
 
-<head #FFOOOO><div id="header" style="text-align:center; padding: 2px; margin:8px"><p style="font-family:cursive"><b><font size="6"> - Projects by mrCookieSlime - </font></b></p></div></head>
+<head #FFOOOO>
+	<div id="header" style="text-align:center; padding: 2px; margin:8px"><p style="font-family:cursive"><b><font size="6"> - Projects by mrCookieSlime - </font></b></p></div>
+</head>
 <p style="font-family:cursive">
 
 <table id="projects" border="2" cellspacing="0">
