Seperated Overlay CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>mrCookieSlime's Projects</title>
 
 <link href="css/layout.css" rel="stylesheet">
+<link href="css/overlay.css" rel="stylesheet">
+
 <script type="text/javascript" src="javascript/search.js"></script>
 <ul>
 	<li><a class="navbarSel">Bukkit Plugins</a></li>
@@ -25,7 +27,6 @@
 	<img class="steam" src="images/steam.png">
 	<span> mrCookieSlime on Steam </span>
 </a>
-
 
 <head #FFOOOO>
 	<div id="header" style="text-align:center; padding: 2px; margin:8px"><p style="font-family:cursive"><b><font size="6"> - Projects by mrCookieSlime - </font></b></p></div>
