--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body bgcolor="#24345A">
 <title>mrCookieSlime's Projects</title>
 
+
 <link href="css/layout.css" rel="stylesheet">
 <link href="css/overlay.css" rel="stylesheet">
 
@@ -23,14 +24,9 @@
 	<img class="github" src="images/github.png">
 	<span> mrCookieSlime on GitHub </span>
 </a>
-<a href="http://steamcommunity.com//id/moewe1">
-	<img class="steam" src="images/steam.png">
-	<span> mrCookieSlime on Steam </span>
-</a>
 
-<head #FFOOOO>
-	<div id="header" style="text-align:center; padding: 2px; margin:8px"><p style="font-family:cursive"><b><font size="6"> - Projects by mrCookieSlime - </font></b></p></div>
-</head>
+
+<head #FFOOOO><div id="header" style="text-align:center; padding: 2px; margin:8px"><p style="font-family:cursive"><b><font size="6"> - Projects by mrCookieSlime - </font></b></p></div></head>
 <p style="font-family:cursive">
 
 <table id="projects" border="2" cellspacing="0">
