--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 	<img class="github" src="images/github.png">
 	<span> mrCookieSlime on GitHub </span>
 </a>
+<a href="https://twitter.com/mrCookieSlime">
+	<img class="twitter" src="images/twitter.png">
+	<span> mrCookieSlime on Twitter </span>
+</a>
 
 
 <head #FFOOOO><div id="header" style="text-align:center; padding: 2px; margin:8px"><p style="font-family:cursive"><b><font size="6"> - Projects by mrCookieSlime - </font></b></p></div></head>
