--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 	<img class="twitter" src="images/twitter.png">
 	<span> mrCookieSlime on Twitter </span>
 </a>
+<a href="https://www.youtube.com/channel/UCNpuxll39TkRJdYVkvgrvgQ">
+	<img class="youtube" src="images/youtube.png">
+	<span> mrCookieSlime on YouTube </span>
+</a>
 
 
 <head #FFOOOO><div id="header" style="text-align:center; padding: 2px; margin:8px"><p style="font-family:cursive"><b><font size="6"> - Projects by mrCookieSlime - </font></b></p></div></head>
