Added Forge Mods Tab

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <script type="text/javascript" src="javascript/search.js"></script>
 <ul>
 	<li><a class="navbarSel">Bukkit Plugins</a></li>
+	<li><a class="navbar" href="http://mrcookieslime.github.io/Mods">Forge Mods</a></li>
 	<li><a class="navbar" href="http://mrcookieslime.github.io/FAQ">FAQ</a></li>
 	<li><a class="navbar" href="http://mrcookieslime.github.io/Slimefun">Slimefun Wiki</a></li>
 	<li><a class="navbar" href="http://mrcookieslime.github.io/contact">Contact</a></li>
