--- a/index.html
+++ b/index.html
@@ -20,19 +20,23 @@
 
 <a href="http://bukkit.org/members/mrcookieslime.90809177/">
 	<img class="bukkit" src="images/bukkit.png">
-	<span> mrCookieSlime on Bukkit </span>
+	<span class="overlay"> mrCookieSlime on Bukkit </span>
 </a>
 <a href="https://github.com/mrCookieSlime">
 	<img class="github" src="images/github.png">
-	<span> mrCookieSlime on GitHub </span>
+	<span class="overlay"> mrCookieSlime on GitHub </span>
 </a>
 <a href="https://twitter.com/mrCookieSlime">
 	<img class="twitter" src="images/twitter.png">
-	<span> mrCookieSlime on Twitter </span>
+	<span class="overlay"> mrCookieSlime on Twitter </span>
 </a>
 <a href="https://www.youtube.com/channel/UCNpuxll39TkRJdYVkvgrvgQ">
 	<img class="youtube" src="images/youtube.png">
-	<span> mrCookieSlime on YouTube </span>
+	<span class="overlay"> mrCookieSlime on YouTube </span>
+</a>
+<a href="https://nodecraft.com/r/mrCookieSlime">
+	<img class="nodecraft" src="https://nodecraft.com/assets/images/partners/community.png">
+	<span class="nodecraft"> Use the Coupon "mrCookieSlime" on Nodecraft for 15% off your first month</span>
 </a>
 <br>
 <br>
