--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <script type="text/javascript" src="javascript/search.js"></script>
 <ul>
+	<li><a class="header" href="http://mrcookieslime.github.io">
+		<img class="header" src="images/header.png" height="90">
+		</a>
+	</li>
 	<li><a class="navbarSel">Bukkit Plugins</a></li>
 	<li><a class="navbar" href="http://mrcookieslime.github.io/Mods">Forge Mods</a></li>
 	<li><a class="navbar" href="http://mrcookieslime.github.io/FAQ">FAQ</a></li>
@@ -41,7 +45,6 @@
 <br>
 <br>
 <br>
-
 
 <head #FFOOOO><div id="header" style="text-align:center; padding: 2px; margin:8px"><p style="font-family:cursive"><b><font size="6"> - Projects by mrCookieSlime - </font></b></p></div></head>
 <p style="font-family:cursive">
