--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 
 
 <link href="css/layout.css" rel="stylesheet">
-<link href="css/overlay.css" rel="stylesheet">
+<link href="http://mrcookieslime.github.io/css/overlay.css" rel="stylesheet">
 <link href="css/navbar.css" rel="stylesheet">
 
 <script type="text/javascript" src="javascript/search.js"></script>
 <ul>
 	<li><a class="header" href="http://mrcookieslime.github.io">
-		<img class="header" src="images/header.png" height="90">
+		<img class="header" src="http://mrcookieslime.github.io/images/header.png" height="90">
 		</a>
 	</li>
 	<li><a class="navbarSel">Bukkit Plugins</a></li>
@@ -24,19 +24,19 @@
 
 <a href="http://bukkit.org/members/mrcookieslime.90809177/">
 	<img class="bukkit" src="images/bukkit.png">
-	<span class="overlay"> mrCookieSlime on Bukkit </span>
+	<span> mrCookieSlime on Bukkit </span>
 </a>
 <a href="https://github.com/mrCookieSlime">
 	<img class="github" src="images/github.png">
-	<span class="overlay"> mrCookieSlime on GitHub </span>
+	<span> mrCookieSlime on GitHub </span>
 </a>
 <a href="https://twitter.com/mrCookieSlime">
 	<img class="twitter" src="images/twitter.png">
-	<span class="overlay"> mrCookieSlime on Twitter </span>
+	<span> mrCookieSlime on Twitter </span>
 </a>
 <a href="https://www.youtube.com/channel/UCNpuxll39TkRJdYVkvgrvgQ">
 	<img class="youtube" src="images/youtube.png">
-	<span class="overlay"> mrCookieSlime on YouTube </span>
+	<span> mrCookieSlime on YouTube </span>
 </a>
 <a href="https://nodecraft.com/r/mrCookieSlime">
 	<img class="nodecraft" src="https://nodecraft.com/assets/images/partners/community.png">
@@ -45,6 +45,7 @@
 <br>
 <br>
 <br>
+
 
 <head #FFOOOO><div id="header" style="text-align:center; padding: 2px; margin:8px"><p style="font-family:cursive"><b><font size="6"> - Projects by mrCookieSlime - </font></b></p></div></head>
 <p style="font-family:cursive">
@@ -275,111 +276,118 @@
     <td><a href="http://dev.bukkit.org/bukkit-plugins/quickbuy/files/">Download Link</a></td>
 </tr>
 <tr class="table_project" bgcolor="#E6F1ED">
+    <td>QuickMarket</td>
+    <td>QuickMarket is a Plugin which makes your job as a Server Owner and the job of your Players super-easy when it comes to Shopping and safe Trades.</td>
+    <td></td>
+    <td><a href="http://dev.bukkit.org/bukkit-plugins/quickmarket/">BukkitDev Link</a></td>
+    <td><a href="http://dev.bukkit.org/bukkit-plugins/quickmarket/files/">Download Link</a></td>
+</tr>
+<tr class="table_project" bgcolor="#F1FEFF">
     <td>QuickSell</td>
     <td>An easy to configure but very advanced Sell-Shop Plugin, adding a GUI, Sell All-Signs and much more...</td>
     <td></td>
     <td><a href="http://dev.bukkit.org/bukkit-plugins/quicksell/">BukkitDev Link</a></td>
     <td><a href="http://dev.bukkit.org/bukkit-plugins/quicksell/files/">Download Link</a></td>
 </tr>
-<tr class="table_project" bgcolor="#F1FEFF">
+<tr class="table_project" bgcolor="#E6F1ED">
     <td>RankPrefix+</td>
     <td>A Rank/Chat Manager which adds Prefixes to the TAB-List and above a Players Head.</td>
     <td></td>
     <td><a href="http://dev.bukkit.org/bukkit-plugins/rankprefix-plus/">BukkitDev Link</a></td>
     <td><a href="http://dev.bukkit.org/bukkit-plugins/rankprefix-plus/files/">Download Link</a></td>
 </tr>
-<tr class="table_project" bgcolor="#E6F1ED">
+<tr class="table_project" bgcolor="#F1FEFF">
     <td>Sensible Toolbox</td>
     <td>This Plugin adds a couple of new Items and Blocks to the game including its own Item and Energy Transport System</td>
     <td></td>
     <td><a href="http://dev.bukkit.org/bukkit-plugins/sensible-toolbox/">BukkitDev Link</a></td>
     <td><a href="http://dev.bukkit.org/bukkit-plugins/sensible-toolbox/files">Download Link</a></td>
 </tr>
-<tr class="table_project" bgcolor="#F1FEFF">
+<tr class="table_project" bgcolor="#E6F1ED">
     <td>Sensible-Bridge</td>
     <td>A little Bridge between Slimefun and Sensible Toolbox. It imports all STB Items into Slimefun.</td>
     <td>Requested by j0ach1mmall3</td>
     <td><a href="http://dev.bukkit.org/bukkit-plugins/sensible-bridge/">BukkitDev Link</a></td>
     <td><a href="http://dev.bukkit.org/bukkit-plugins/sensible-bridge/files">Download Link</a></td>
 </tr>
-<tr class="table_project" bgcolor="#E6F1ED">
+<tr class="table_project" bgcolor="#F1FEFF">
     <td>Shelter</td>
     <td>A Slimefun Addon which adds preset Shelters to the Game which can be built by supplying the needed materials; Based on The Forest</td>
     <td></td>
     <td><a href="http://dev.bukkit.org/bukkit-plugins/shelter/">BukkitDev Link</a></td>
     <td><a href="http://dev.bukkit.org/bukkit-plugins/shelter/files">Download Link</a></td>
 </tr>
-<tr class="table_project" bgcolor="#F1FEFF">
+<tr class="table_project" bgcolor="#E6F1ED">
     <td>Slimefun</td>
     <td>This Plugin adds new Items to the game. Yes, you read that correctly, it adds over 200+ new Items to the Game without any Mods. It will basically turn your whole Server into a FTB modpack.</td>
     <td></td>
     <td><a href="http://dev.bukkit.org/bukkit-plugins/slimefun/">BukkitDev Link</a></td>
     <td><a href="http://dev.bukkit.org/bukkit-plugins/slimefun/files">Download Link</a></td>
 </tr>
-<tr class="table_project" bgcolor="#E6F1ED">
+<tr class="table_project" bgcolor="#F1FEFF">
     <td>SlimyDrops</td>
     <td>A simple Drop Party Plugin which is able to drop Slimefun/MagicLoot Items as well as XP</td>
     <td></td>
     <td><a href="http://dev.bukkit.org/bukkit-plugins/slimydrops/">BukkitDev Link</a></td>
     <td><a href="http://dev.bukkit.org/bukkit-plugins/slimydrops/files/">Download Link</a></td>
 </tr>
-<tr class="table_project" bgcolor="#F1FEFF">
+<tr class="table_project" bgcolor="#E6F1ED">
     <td>Speedy Mobs</td>
     <td>Allows you to set different walking speeds for mobs</td>
     <td>Requested by PhillyCheezsteak</td>
     <td></td>
     <td><a href="https://www.dropbox.com/s/1c1v4zzm23xwh01/SpeedyMobs%20v1.0.jar?dl=0">Download Link</a></td>
 </tr>
-<tr class="table_project" bgcolor="#E6F1ED">
+<tr class="table_project" bgcolor="#F1FEFF">
     <td>TNTMines</td>
     <td>This Plugin creates Explosions whenever you break TNT, those explosion will destroy nearby blocks. Compatible with PrisonUtils!</td>
     <td></td>
     <td></td>
     <td><a href="https://www.dropbox.com/s/dhlg13rmzdtc78y/TNTMines%20v1.0.jar?dl=0">Download Link</a></td>
 </tr>
-<tr class="table_project" bgcolor="#F1FEFF">
+<tr class="table_project" bgcolor="#E6F1ED">
     <td>TrollingJail</td>
     <td>A different kind of Jail Plugin... It traps Players in client-side Cobweb-Cages which are really annoying... They will never grief again! :3</td>
     <td></td>
     <td><a href="http://dev.bukkit.org/bukkit-plugins/trollingjail/">BukkitDev Link</a></td>
     <td><a href="http://dev.bukkit.org/bukkit-plugins/trollingjail/files/">Download Link</a></td>
 </tr>
-<tr class="table_project" bgcolor="#E6F1ED">
+<tr class="table_project" bgcolor="#F1FEFF">
     <td>Troubleshooter</td>
     <td>This Plugin helps you to determine where Errors occur and what the issue is including some important server infos which help the developer to see what the issue is within seconds</td>
     <td></td>
     <td></td>
     <td><a href="https://www.dropbox.com/s/uojj4xz4yue367f/Troubleshooter.jar?dl=0">Download Link</a></td>
 </tr>
-<tr class="table_project" bgcolor="#F1FEFF">
+<tr class="table_project" bgcolor="#E6F1ED">
     <td>Veinminer for Bukkit</td>
     <td>This Plugin allows you to mine all adjacent Blocks of the same Type when holding Shift. As seen in the mod Veinminer</td>
     <td></td>
     <td><a href="http://dev.bukkit.org/bukkit-plugins/veinminer-bukkit/">BukkitDev Link</a></td>
     <td><a href="http://dev.bukkit.org/bukkit-plugins/veinminer-bukkit/files/">Download Link</a></td>
 </tr>
-<tr class="table_project" bgcolor="#E6F1ED">
+<tr class="table_project" bgcolor="#F1FEFF">
     <td>VirtualFarms</td>
     <td>A Plugin which allows you to buy virtual Farms which generate Items for you over time</td>
     <td>Requested by Hergarian</td>
     <td></td>
     <td><a href="https://www.dropbox.com/s/9lad0j6v82l5etd/VirtualFarms%20v1.0.jar?dl=0">Download Link</a></td>
 </tr>
-<tr class="table_project" bgcolor="#F1FEFF">
+<tr class="table_project" bgcolor="#E6F1ED">
     <td>VotingPoll</td>
     <td>This Plugin allows you to create Polls which your Users can answer</td>
     <td>Requested by 1RuneKing</td>
     <td><a href="http://dev.bukkit.org/bukkit-plugins/votingpoll/">BukkitDev Link</a></td>
     <td><a href="http://dev.bukkit.org/bukkit-plugins/votingpoll/files/">Download Link</a></td>
 </tr>
-<tr class="table_project" bgcolor="#E6F1ED">
+<tr class="table_project" bgcolor="#F1FEFF">
     <td>WeightRestriction</td>
     <td>This Plugin allows you to forbid certain Commands if your Inventory is too full. Check the Config!</td>
     <td>Requested by CiyscoMisco</td>
     <td></td>
     <td><a href="https://www.dropbox.com/s/5i0oavje1q22vdp/WeightRestriction%20v1.0.jar?dl=0">Download Link</a></td>
 </tr>
-<tr class="table_project" bgcolor="#F1FEFF">
+<tr class="table_project" bgcolor="#E6F1ED">
     <td>ZeldaHearts</td>
     <td>This Plugin adds a new Health System to Minecraft. You start with 3 Hearts and by killing Mobs you recover Health, you can increase your Max-Health by killing Bosses and (if thief mode is enabled) you can steal other Players Hearts by killing them.</td>
     <td></td>
